# sway-services

./: PKGBUILD  README.md
systemd/: kanshi.service  meson.build  sway.service  swayidle.service  waybar.service
systemd/sway/: sway.service  swayidle.service
systemd/targets/: desktop-environment.target  graphical-session-timers.target  wayland-session-pre.target  wayland-session.target
systemd/wob/: wob-mkfifo.service  wob.service  wob.socket
